* Treat empty read-only, or non-existent, calendar files as loaded.
* Ensure KAlarm command line actions are performed if KAlarm is already running [KDE Bug 446749]
* Don't disable alarms after KAlarm command line action while KAlarm is already running [KDE Bug 446749]
* Fix resource ID numbers not working in command line & DBUS commands.

=== Version 3.3.3 (KDE Applications 21.12) --- 7 November 2021 ===
* Show numbers in localised form.
* Make time edit spinboxes show time using localised format and numbers.
* Fix infinite loop due to invalid recurrence date when using locale with non-ASCII numbers (requires kalarmcal 21.12).

=== Version 3.3.2 (KDE Applications 21.08.3) --- 30 October 2021 ===
* Make time edit field arrows work with Breeze application style [KDE Bug 443062]
* Fix display errors in time edit field arrows.
* Fix unusable sub-daily recurrence editor with non-Breeze application style.
* Use translated forms of "am" and "pm" when displaying times.

=== Version 3.3.1 (KDE Applications 21.08.1) --- 29 August 2021 ===
* Fix crash when KAlarm is launched while already running [KDE Bug 441660]

=== Version 3.3.0 (KDE Applications 21.08) --- 1 August 2021 ===
* Add date selector option to enable alarm list view to be filtered.
* Show hamburger menu when menu bar is hidden, to allow access to all options.
* Fix crash when context menu is requested after toolbar has been edited.
* Fix crash when alarm message is shown on a multiple screen system using Wayland [KDE Bug 439853]
* Fix alarm not triggering if a reminder is set after the main alarm (requires kalarmcal 21.08) [KDE Bug 440200]
* Fix 'Choose sound file' dialogue not showing audio files, under XFCE etc [KDE Bug 437217]
* Fix alarm time showing blank in alarm list when using right-to-left languages.
* Fixes to dialogue layouts when using right-to-left languages.

=== Version 3.2.2 (KDE Applications 21.04.2) --- 26 May 2021 ===